@@ -6,3 +6,4 @@ https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-colorfu
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-asakusa-bon-odori-china-festival-and-sumo/
 https://tokyocheapo.com/editorial/biggest-fears-japan/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-disaster-prevention-and-last-chance-exhibitions/
+https://tokyocheapo.com/entertainment/tokyo-events-september/
